plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.21'
}

group 'edu.caltech'
version '2.1.0.4'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.json', name: 'json', version: '20180813'
    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    compile files("${System.getProperty('java.home')}/../lib/tools.jar")
}


intellij {
    version '2020.1.2'
    plugins 'java'
    sandboxDirectory = "${System.properties['user.home']}/Library/Caches/IntelliJIdea2019.2/plugins-sandbox/"
    updateSinceUntilBuild false
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

buildPlugin {
    //jvmArgs = ['--add-exports java.base/jdk.internal.vm=ALL-UNNAMED']
}

publishPlugin {
    token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
}

patchPluginXml {
}